--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -1,5 +1,5 @@
 % File: traffic_control_signals.tex, author: John Sauter,
-% date: May 4, 2025.
+% date: May 10, 2025.
 
 % Copyright © 2025 by John Sauter.
 % Licensed under the Creative Commons Attribution-ShareAlike 4.0 International
@@ -196,12 +196,12 @@
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2025 by John Sauter},
   pdfurl={https://www.systemeyescomputerstore.com/traffic\%5Fsignals/traffic\%5Fsignals.pdf},
-  pdfdate={2025-05-04},
+  pdfdate={2025-05-10},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}
 }
 
-\date{2025-05-04}
+\date{2025-05-10}
 \maketitle
 \begin{abstract}
   Traffic control signals allow vehicles and pedestrians to move through
@@ -1174,11 +1174,15 @@ A will turn red and eventually become clear, which will allow
 signal faces F and G to turn green when their Red Limit timers complete,
 as described above.
 
-However, if the vehicle makes the permissive left turn, signal face A
-returns to red, never causing signal faces F and G to turn red.
+The following events take place assuming that the driver of the
+car turning left is not willing to make the permissive turn,
+and so waits for the green arrow.
 
-The following are the events that take place assuming that there is only
-one vehicle and that turns left after waiting at the light for a short time..
+\input{left_turn_delayed_table.tex}
+
+However, if the vehicle makes the permissive left turn, signal face A
+returns to red, never causing signal faces F and G to turn red,
+as illustrated in the following events.
 
 \input{left_turn_table.tex}
 
