--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -691,7 +691,7 @@ outside world.  These are:
 
 A signal face will set Clearance Requested in conflicting signal faces
 when it wants the conflicting signal face to turn red so it can turn green.
-When a signal face sees that its own Clearance Reuqested toggle has been
+When a signal face sees that its own Clearance Requested toggle has been
 set, it turns red.
 
 \subsubsection{Cleared}
