--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -1,5 +1,5 @@
 % File: traffic_control_signals.tex, author: John Sauter,
-% date: May 10, 2025.
+% date: June 29, 2025.
 
 % Copyright © 2025 by John Sauter.
 % Licensed under the Creative Commons Attribution-ShareAlike 4.0 International
@@ -196,12 +196,12 @@
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2025 by John Sauter},
   pdfurl={https://www.systemeyescomputerstore.com/traffic\%5Fsignals/traffic\%5Fsignals.pdf},
-  pdfdate={2025-05-17},
+  pdfdate={2025-06-29},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}
 }
 
-\date{2025-05-17}
+\date{2025-06-29}
 \maketitle
 \begin{abstract}
   Traffic control signals allow vehicles and pedestrians to move through
@@ -972,6 +972,15 @@ signal face conflict table to determine which signal faces conflict
 with this one.  If all of those signal faces have their Clear toggles
 true, set the Partial Conflicting Paths are Clear toggle in this
 signal face.
+
+\subsubsection{Safety Check}
+
+An error in the description of the finite state machine, or an error
+in the implementation of the finite state machine driver or the
+system programs may cause the signal faces to get into unintended
+states, such that intersecting traffic flows are permitted in the
+intersection.  Sucn a condition is unsafe.  Check for incompatible
+states and, if such a state is found, set the intersection to flashing.
 
 \section{Wiring the Finite State Machines to the Lamps}
 
