--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -1,5 +1,5 @@
 % File: traffic_control_signals.tex, author: John Sauter,
-% date: July 19, 2025.
+% date: August 3, 2025.
 
 % Copyright © 2025 by John Sauter.
 % Licensed under the Creative Commons Attribution-ShareAlike 4.0 International
@@ -196,12 +196,12 @@
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2025 by John Sauter},
   pdfurl={https://www.systemeyescomputerstore.com/traffic\%5Fsignals/traffic\%5Fsignals.pdf},
-  pdfdate={2025-07-19},
+  pdfdate={2025-08-03},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}
 }
 
-\date{2025-07-19}
+\date{2025-08-03}
 \maketitle
 \begin{abstract}
   Traffic control signals allow vehicles and pedestrians to move through
@@ -992,7 +992,7 @@ connected to a lamp which shows a Steady Left Arrow Red.
 Table \ref{lamp_wiring} shows wiring between the signal face finite state
 machines and the lamps in the signal faces.
 
-\input {lamp_map_names.tex}
+\input {lamp_map_names_02.tex}
 
 \section{Wiring the Finite State Machines to the Sensors}
 
@@ -1026,7 +1026,7 @@ even if the sensor has not been triggered.  Thus we connect the sensors
 for lanes psw and pse to both signal faces psw and pse, and the sensors
 for lanes pnw and pne to both signal faces pnw and pne.
 
-\input {sensor_map.tex}
+\input {sensor_map_02.tex}
 
 \section{Scenarios}
 
