--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -1,5 +1,5 @@
 % File: traffic_control_signals.tex, author: John Sauter,
-% date: August 24, 2025.
+% date: August 30, 2025.
 
 % Copyright © 2025 by John Sauter.
 % Licensed under the Creative Commons Attribution-ShareAlike 4.0 International
@@ -196,12 +196,12 @@
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2025 by John Sauter},
   pdfurl={https://www.systemeyescomputerstore.com/traffic\%5Fsignals/traffic\%5Fsignals.pdf},
-  pdfdate={2025-08-24},
+  pdfdate={2025-08-30},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}
 }
 
-\date{2025-08-24}
+\date{2025-08-30}
 \maketitle
 \begin{abstract}
   Traffic control signals allow vehicles and pedestrians to move through
@@ -663,7 +663,11 @@ Red Limit times set to infinity since those signal faces should
 remain red in the absence of traffic.
 Signal faces B, C, F, and G have their Red Limit times set to 60 seconds.
 
-\subsubsection{Traffic Still Present}
+\subsection{Traffic Gone Time}
+If we are green and there is no cross traffic, but we have seen no traffic
+for Traffic Gone seconds, turn red.
+
+\subsubsection{Traffic Still Present Time}
 If we are trying to turn green due to a vehicle being present or approaching
 the intersection, but after this much time the vehicle is not present, then
 we stop trying to turn green.  The vehicle has likely made a permissive right
