--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -1,5 +1,5 @@
 % File: traffic_control_signals.tex, author: John Sauter,
-% date: August 31, 2025.
+% date: September 1, 2025.
 
 % Copyright © 2025 by John Sauter.
 % Licensed under the Creative Commons Attribution-ShareAlike 4.0 International
@@ -196,12 +196,12 @@
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2025 by John Sauter},
   pdfurl={https://www.systemeyescomputerstore.com/traffic\%5Fsignals/traffic\%5Fsignals.pdf},
-  pdfdate={2025-08-31},
+  pdfdate={2025-09-01},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}
 }
 
-\date{2025-08-31}
+\date{2025-09-01}
 \maketitle
 \begin{abstract}
   Traffic control signals allow vehicles and pedestrians to move through
@@ -293,11 +293,17 @@ green.
 \subsection{Sensors}
 
 In order to know when we need to stop traffic from entering the bridge
-we have sensors in the lanes to detect vehicles.  Lanes A and B each
+we have sensors in the lanes to detect vehicles.
+
+\subsubsection{Traffic Present}
+
+Lanes A and B each
 have a vehicle sensor at the stop line where the lane meets the
 intersection.  This sensor tells us that a vehicle is entering
 the intersection or is waiting to enter.  We call this the Traffic
 Present sensor.
+
+\subsubsection{Traffic Approaching}
 
 For safety reasons the Traffic Present sensor isn't sufficient.
 Because bridge traffic is very light, vehicle operators will be
@@ -325,7 +331,7 @@ bridge, so that the other lane can be given a green light.
 To give traffic warning that we are soon turning red, we first turn our light
 yellow for Yellow Change time.
 
-\subsubsection{Minimum Green time}
+\subsubsection{Minimum Green Time}
 When a signal face turns green we want to give the traffic some time
 to get moving before we consider turning red.
 
@@ -350,13 +356,17 @@ If we have reached maximum green time and there has been no conflicting
 traffic, but conflicting traffic arrives later, wait maximum green extra time
 for a gap.  If there isn't one, turn red anyway.
 
-\subsubsection{Vehicle Gone time}
-If there have been no vehicles for vehicle gone time, turn red.
-This will give is am early red in the absence of traffic.
+\subsubsection{Traffic Gone Time}
+If we are green and there is no cross traffic, but we have seen no traffic
+for Traffic Gone seconds, turn red.
 
-\subsubsection{Green Limit}
-If we have reached green limit time turn red even if there has been no
-traffic.
+\subsubsection{Green Limit Time}
+
+If we have been green for green limit seconds, turn red even if there
+is no conflicting traffic.  This is needed to keep all the signal faces
+red when there is no traffic, which is the normal case.  Only if all
+signal faces have been red for red clearance seconds can we give
+an instant green when traffic approaches.
 
 \subsection{Toggles}
 
@@ -378,7 +388,7 @@ The Traffic Present sensor has detected a vehicle.
 
 When a signal face is red but wants to turn green it sets this toggle.
 
-\subsubsection{Request Green Granted}
+\subsubsection{Green Request Granted}
 
 When a signal face sees this toggle set it can ask the other signal
 face to turn red.
@@ -398,13 +408,20 @@ set, it turns red.
 
 When a signal face has been red long enough for all of its traffic
 to have cleared the intersection it sets the Cleared toggle.
-This causes the Conflicting Paths are Clear toggle to be set
+This causes the Partial Conflicting Paths are Clear toggle to be set
 in the other signal face.
 
 \subsubsection{Partial Conflicting Paths are Clear}
 
 When a signal face sees this toggle set it can change from red
 to green.
+
+\subsubsection{Traffic Flowing}
+
+When a signal face has turned green it sets this toggle to indicate
+that it no longer needs to turn green.  Doing this gives permission
+to the other signal face to begin the process of turning green,
+if it needs to.
 
 \subsection{Wiring the Finite State Machines to the Lamps}
 
@@ -510,24 +527,6 @@ for signal faces B and D.
 
 In addition to the timers we described for the single-lane bridge,
 we need the following:
-
-\subsubsection{Green Limit Time}
-
-If we have been green for green limit seconds, turn red even if there
-is no conflicting traffic.  This is needed to keep all the signal faces
-red when there is no traffic, which is the normal case.  Only if all
-signal faces have been read for red clearance seconds can we give
-an instant green when traffic approaches.
-
-\subsubsection{Maximum Green Extra time}
-
-If there is no conflicting traffic waiting for us to turn red and we have
-passed Maximum Green time, rather than turn red immediately when conflicting
-traffic appears, wait up to Maximum Green Extra time for a gap in the traffic.
-
-\subsubsection{Traffic Gone Time}
-If we are green and there is no cross traffic, but we have seen no traffic
-for Traffic Gone seconds, turn red.
 
 \subsubsection{Traffic Still Present Time}
 If we are trying to turn green due to a vehicle being present or approaching
@@ -767,14 +766,14 @@ that a waiting vehicle cannot make its turn for Left Flashing Yellow Waiting
 seconds, the oncoming traffic will be stopped, thus allowing a protected left
 turn.
 
-\subsubsection{Minimum Left Flashing Yellow time}
+\subsubsection{Minimum Left Flashing Yellow Time}
 
 Lanes A and E will allow a left turn in the presence of oncoming traffic,
 called a permissive left turn. Once we have turned on the left flashing
 yellow light, we keep it on at least Minimum Left Flashing Yellow time
 to make sure the left turning traffic is able to start up.
 
-\subsubsection{Red Limit time}
+\subsubsection{Red Limit Time}
 If the signal face has been red for this many seconds, turn it green
 even if there is no traffic.
 
@@ -811,7 +810,7 @@ green until this toggle is cleared.
 \subsubsection{Request Clearance}
 If a lane remains occupied after signaling that a permissive left
 turn is allowed, the signal face asks that oncoming traffic also
-be stopped by setting Request Clearance.
+be stopped by setting toggle Request Clearance.
 
 \subsubsection{Conflicting Paths are Clear}
 When a signal face sees that this toggle is set it can turn green.
@@ -1136,8 +1135,8 @@ red and clear.
 
 Signal faces psw and pse will proceed to substate Going Green 1 where
 they will set
-toggle Request Green.  The Request Green Granted system program will act
-as described above to set the Request Green Granted toggle since no other
+toggle Request Green.  The Green Request Granted system program will act
+as described above to set the Green Request Granted toggle since no other
 signal faces are waiting to turn green.  Signal faces psw and pse will then
 proceed to substate Going Green 2 where they will set toggle Request Partial
 Clearance.  System program Partial Conflicting Paths are Clear will set
