--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -1,5 +1,5 @@
 % File: traffic_control_signals.tex, author: John Sauter,
-% date: September 1, 2025.
+% date: September 9, 2025.
 
 % Copyright © 2025 by John Sauter.
 % Licensed under the Creative Commons Attribution-ShareAlike 4.0 International
@@ -196,12 +196,12 @@
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2025 by John Sauter},
   pdfurl={https://www.systemeyescomputerstore.com/traffic\%5Fsignals/traffic\%5Fsignals.pdf},
-  pdfdate={2025-09-01},
+  pdfdate={2025-09-09},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}
 }
 
-\date{2025-09-01}
+\date{2025-09-09}
 \maketitle
 \begin{abstract}
   Traffic control signals allow vehicles and pedestrians to move through
@@ -368,6 +368,16 @@ red when there is no traffic, which is the normal case.  Only if all
 signal faces have been red for red clearance seconds can we give
 an instant green when traffic approaches.
 
+\subsection{Timer Durations}
+
+Here are the lengths of time that each timer runs:
+
+\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
+\newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
+\newcolumntype{L}{>{\centering\arraybackslash}l}
+
+\input {timer_durations_01.tex}
+
 \subsection{Toggles}
 
 When a signal face detects a vehicle approaching it must not turn green
@@ -428,10 +438,6 @@ if it needs to.
 Each signal face finite state machine is wired to the lamps that
 it controls.  Table \ref{lamp_map_01} shows wiring between the signal
 face finite state machines and the lamps in the signal faces.
-
-\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
-\newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
-\newcolumntype{L}{>{\centering\arraybackslash}l}
 
 \input {lamp_map_names_01.tex}
 
@@ -550,6 +556,12 @@ This toggle is set by the emergency vehicle detector if the emergency
 vehicle is coming from another direction, or if it cannot detect
 which direction the emergency vehicle is coming from.
 
+\subsection{Timer Durations}
+
+Here are the lengths of time that each timer runs:
+
+\input {timer_durations_02.tex}
+
 \subsection{Wiring the Finite State Machines to the Lamps}
 
 Each signal face finite state machine is wired to the lamps that
@@ -626,7 +638,7 @@ or 6 (left turn).  Whenever two travel paths from different entry lanes
 occupy the same space in the intersection, the entry lanes
 conflict, so only one of them can be green at a time.
 
-\begin{longtable}{l |l| p{8cm}}
+\begin{longtable}{l | l | p{8cm}}
   \caption{Travel Path Conflicts} \\
   in & out & conflicts with \endfirsthead
   \caption{Travel Path Conflicts continued} \\
@@ -776,6 +788,14 @@ to make sure the left turning traffic is able to start up.
 \subsubsection{Red Limit Time}
 If the signal face has been red for this many seconds, turn it green
 even if there is no traffic.
+
+\subsection{Timer Durations}
+
+Here are the lengths of times that the timers run for.  Unlimited means
+that the timer never completes; thus there is, for example, no limit on
+how long signal face A can remain red.
+
+\input {timer_durations_03.tex}
 
 \subsection{Toggles}
 
